# OCL_Image_filter

./: CMakeLists.txt  README.md  convkernel.cl  ocl_filter.cpp
